--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ h1, h2, h3, h4, h5 {
   display: block;
   padding: 9px 40px;
   font-size: 16px;
+  transition: background-color .2s linear;
 }
 
 .navbar-item:hover {
@@ -125,6 +126,10 @@ h1, h2, h3, h4, h5 {
   cursor: pointer;
 }
 
+path.current-floor {
+  opacity: .75;
+}
+
 .main-info {
   flex-grow: 1;
   display: flex;
@@ -169,7 +174,7 @@ h1, h2, h3, h4, h5 {
 .counter {
   font-size: 74px;
   color: #635854;
-  margin: 30px;
+  margin: 10px;
 }
 
 .btn {
